[package]
name = "zelda"
description = "Zelda, an application-level network protocol for games."
version = "0.2.0"
license = "MIT"
authors = ["oskarbraten <oskar.braten@outlook.com>"]
readme = "README.md"
documentation = "https://docs.rs/zelda"
repository = "https://github.com/oskarbraten/zelda"
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["release_max_level_error"] }
thiserror = "1.0"
tokio = { version = "1.4.0", features = ["full"] }
tokio-rustls = { version = "0.22.0", optional = true }
futures = "0.3"
rand = "0.8.3"
cmac = "0.5.1"
aes = "0.6.0"
hibitset = { version = "0.6.3", default-features = false }
slab = "0.4.2"

[dev-dependencies]
env_logger = "0.8.3"
anyhow = "1.0"

[features]
default = ["rustls", "token"]
rustls = ["tokio-rustls"]
token = []